<resources>
    <string name="app_name">MentorNet</string>
    <string name="failed_to_login">Failed to Login</string>
    <string name="sign_out">Sign out</string>
    <string name="people_string">People</string>
    <string name="kudos_string">Kudos</string>
    <string name="boards_string">Boards</string>
    <string name="profile_string">Profile</string>
    <string name="profile_about_string">About</string>
    <string name="feedback_string">Feedback</string>
    <string name="trainings_string">Trainings</string>
    <string name="clients_string">Clients</string>
    <string name="crystals_string">Crystals</string>
    <string name="about_string">About</string>
    <string name="default_employee_name">John Doe</string>
    <string name="default_employee_name_short">J.Doe</string>
    <string name="default_employee_email">email@mentormate.com</string>
    <string name="default_position_and_city">Senior Java Developer at Veliko Tarnovo</string>
    <string name="default_start_date">started on January 1, 1970</string>
    <string name="default_employee_text">Employee info text</string>
    <string name="press_back_again_string">Please press back again if you wish to exit.</string>
    <string name="not_authorized">You are not authorized to use this application.</string>
    <string name="logo">logo</string>
    <string name="default_employee_first_name">John</string>
    <string name="default_employee_last_name">Doe</string>
    <string name="default_employee_position">Senior Java Developer</string>
    <string name="default_employee_city">Veliko Tarnovo</string>
    <string name="employee_avatar_shared_transition_key">employee_avatar</string>
    <string name="employee_name_shared_transition_key">employee_name</string>
    <string name="employee_position_shared_transition_key">employee_position</string>
    <string name="leader_avatar_shared_transition_key">leader_avatar</string>
    <string name="leader_name_shared_transition_key">leader_name</string>
    <string name="leader_position_shared_transition_key">leader_position</string>
    <string name="welcome_to_mm">Welcome to the Land of \nMentorMate!</string>
    <string name="mm_login_desc">Quests, Crystals, Rewards. The Land of MentorMate\n has plenty of amazing treasures
        waiting for you.
    </string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="default_employee_crystals">10</string>
    <string name="desc_reach_for_orders">Select your reward and reach out to officeassistants@mentormate.com for
        clarifications and orders.
    </string>
    <string name="store_item_dialog">Store item dialog</string>
    <string name="view_store_button">View Store</string>
    <string name="image_name">imageName</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="description">description</string>
    <string name="view_more_string">View more</string>
    <string name="view_less_string">View less</string>
    <string name="default_leaderboards_title">Top 5 crystals collectors</string>
    <string name="leaderboards_prefix">Top</string>
    <string name="date_format_input">yyyy-MM-dd\'T\'hh:mm:ss.SSSZ</string>
    <string name="date_format_output">dd/MMM yyyy</string>
    <string name="date_format_output_about">MMMM, yyyy</string>
    <string name="date_format_input_about">yyyy-MM-dd</string>
    <string name="kudos_for_you">Your kudos</string>
    <string name="kudos_by_you">Kudos written by you</string>
    <string name="no_written_kudos_yet">This person has not written any kudos yet!</string>
    <string name="no_kudos_yet">This person has no kudos yet!</string>
    <string name="no_clients_yet">This person has no clients yet!</string>
    <string name="search_hint">Search by name or location</string>
    <string name="success_kudo">Successfully posted kudos!</string>
    <string name="offline">You have no Internet access currently.</string>
    <string name="offline_mode">You are currently in offline mode.</string>
    <string name="failure_kudo">Unable to post kudo due to being in offline mode.</string>
    <string name="mentormate_suffix">"@mentormate.com"</string>
    <string name="course_category_id">courseCategoryId</string>
    <string name="course_percentage">coursePercentage</string>
    <string name="done">Done</string>
    <string name="water">water</string>
    <string name="air">air</string>
    <string name="earth">earth</string>
    <string name="fire">fire</string>
    <string name="By">By</string>
    <string name="To">To</string>
    <string name="item_name">Item Name</string>
    <string name="project_name">Building brave</string>
    <string name="first">1</string>
    <string name="placeholder">placeholder</string>
    <string name="together_since">Together since</string>
    <string name="date">date</string>
    <string name="no_spam">No spam to</string>
    <string name="email">Email</string>
    <string name="find_me">Find me here</string>
    <string name="desk_location">Desk location</string>
    <string name="input_text">Write text here..</string>
    <string name="submit">Submit</string>
    <string name="mm_essentials">MM ESSENTIALS</string>
    <string name="earth_kingdom">earth kingdom</string>
    <string name="events">events</string>
    <string name="okay">OK</string>
    <string name="course_name">Client Satisfaction &amp; Communication Part 1</string>
    <string name="not_started">Not Started</string>

</resources>
