<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_about_fragment"
>

    <TextView
            android:text="@string/together_since"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:lineSpacingExtra="8sp"
            android:textColor="#61000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_desc"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF1D2C3D"
            android:textSize="16sp"
            android:id="@+id/start_date"
            app:layout_constraintTop_toBottomOf="@+id/date_desc"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/no_spam"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:lineSpacingExtra="8sp"
            android:layout_width="wrap_content"
            android:textColor="#61000000"
            android:layout_height="wrap_content"
            android:id="@+id/together_since" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/start_date"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/email"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:id="@+id/employee_email"
            app:layout_constraintTop_toBottomOf="@+id/together_since"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/find_me"
            android:textAllCaps="true"
            android:lineSpacingExtra="8sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_course_name"
            android:textSize="12sp"
            android:textColor="#61000000"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/employee_email"/>
    <TextView
            android:text="@string/desk_location"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desk_location"
            app:layout_constraintTop_toBottomOf="@+id/first_course_name"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>