<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ripple"
>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/employee_avatar"
            android:src="@drawable/ic_account_circle_black_24dp"
            tools:ignore="contentDisposition"
            android:layout_width="47dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:transitionName="@string/employee_avatar_shared_transition_key"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

    <TextView
            android:id="@+id/employee_name"
            android:height="19dp"
            android:transitionName="@string/employee_name_shared_transition_key"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:lineSpacingMultiplier="1.19"
            android:text="@string/default_employee_name"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            app:layout_constraintStart_toEndOf="@+id/employee_avatar"
            android:layout_marginStart="16dp" android:textStyle="bold" android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/employee_position_in_city"/>

    <TextView
            android:id="@+id/employee_position_in_city"
            android:minLines="1"
            android:maxLines="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:lineSpacingMultiplier="1.17"
            android:maxWidth="180dp"
            android:text="@string/default_position_and_city"
            app:layout_constraintTop_toBottomOf="@+id/employee_name"
            app:layout_constraintStart_toEndOf="@+id/employee_avatar"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:transitionName="@string/employee_position_shared_transition_key"
            android:textColor="#FF8794A8"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/roboto"
            app:layout_constraintVertical_bias="0.666"
    />

    <CheckBox

            android:buttonTint="@color/colorAccent"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:id="@+id/checkBox" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="23dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>