<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:cardview="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cardview_store_items"
        android:clickable="false"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="center_horizontal"
        cardview:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/store_item_image"
                android:scaleType="fitXY"
                android:layout_height="70dp"
                android:layout_width="70dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="0dp" app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_name"/>

        <ImageView
                android:id="@+id/crystal"
                android:layout_width="17dp"
                android:layout_height="13dp"
                android:scaleType="centerCrop"
                cardview:layout_constraintStart_toStartOf="@+id/store_item_image" android:layout_marginStart="299dp"
                android:layout_marginEnd="29dp" cardview:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="28dp" cardview:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="29dp" cardview:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/crystals_string"/>
        <TextView
                android:id="@+id/item_name"
                tools:text="@string/item_name"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorTextDark"
                android:minLines="1"
                android:maxLines="2"
                android:maxWidth="150dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="26dp" cardview:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="25dp" cardview:layout_constraintBottom_toBottomOf="parent"
                cardview:layout_constraintStart_toEndOf="@+id/store_item_image" android:layout_marginStart="16dp"
        />
        <TextView
                tools:text="@string/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_crystal_price"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/colorTextDark"
                android:layout_marginTop="27dp"
                cardview:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="27dp"
                cardview:layout_constraintBottom_toBottomOf="parent"
                cardview:layout_constraintVertical_bias="0.333" android:layout_marginEnd="8dp"
                cardview:layout_constraintEnd_toStartOf="@+id/crystal"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>