<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            tools:context=".ui.fragment.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_06_mmlogo_mark"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.gms.common.SignInButton
                android:text="@string/login_with_google"
                android:id="@+id/sign_in_button"
                android:layout_width="328dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.496"
                android:layout_marginBottom="34dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="556dp" app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:src="@drawable/bg_login"
                android:layout_width="211dp"
                android:layout_height="211dp"
                android:id="@+id/mm_login_image"
                android:contentDescription="@string/placeholder"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/item_crystal_price"
                android:layout_marginStart="74dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="74dp"
                app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
                android:textStyle="bold"
                android:fontFamily="@font/roboto"
                android:text="@string/welcome_to_mm"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_crystal_price"
                android:lineSpacingExtra="4sp"
                android:textColor="@color/colorAccent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/icon"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
        <TextView

                android:text="@string/mm_login_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/roboto"
                android:alpha="0.7"
                android:textAlignment="center"
                android:textColor="@color/colorTextDark"
                android:id="@+id/item_name"
                android:lineSpacingExtra="5sp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="154dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mm_login_image"
                app:layout_constraintHorizontal_bias="0.49" app:layout_constraintVertical_bias="0.201"/>

        <ImageView
                android:src="@drawable/btn_rounded"
                app:layout_constraintCircleRadius="3dp"
                android:layout_width="328dp"
                android:layout_height="50dp"
                android:id="@+id/overLoginButtonImage"
                android:contentDescription="@string/placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/sign_in_button"
                app:layout_constraintTop_toTopOf="@+id/sign_in_button"/>
        <ImageView
                android:src="@drawable/ic_08_google_logo"
                android:layout_width="24dp"
                android:layout_height="15dp"
                android:contentDescription="@string/placeholder"
                android:id="@+id/googleLogo" app:layout_constraintStart_toStartOf="@+id/overLoginButtonImage"
                app:layout_constraintTop_toTopOf="@+id/overLoginButtonImage" android:layout_marginBottom="17dp"
                app:layout_constraintBottom_toBottomOf="@+id/overLoginButtonImage" app:layout_constraintVertical_bias="0.555"
                app:layout_constraintEnd_toEndOf="@+id/overLoginButtonImage" android:layout_marginEnd="228dp"
                android:layout_marginStart="76dp" android:layout_marginTop="18dp"/>
        <TextView
                android:text="@string/login_with_google"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:id="@+id/second_course_name"
                app:layout_constraintStart_toStartOf="@+id/overLoginButtonImage" android:layout_marginEnd="76dp"
                app:layout_constraintEnd_toEndOf="@+id/overLoginButtonImage"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintTop_toTopOf="@+id/overLoginButtonImage" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/overLoginButtonImage" android:layout_marginStart="116dp"
                android:layout_marginTop="18dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


