<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
       android:orientation="vertical"
        android:layout_width="match_parent"
        app:cardElevation="0dp"
        app:cardCornerRadius="5dp"
        android:layout_height="70dp">

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/training_image"
                android:layout_width="71dp" android:layout_height="70dp"
                android:src="@drawable/ic_earth"
                android:contentDescription="@string/placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/training_name"
                android:text="@string/mm_essentials"
                android:textSize="16sp"
                android:fontFamily="@font/roboto"
                android:textColor="#FF1D2C3D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/training_image"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/training_kingdom"
                android:text="@string/earth_kingdom"
                android:textAllCaps="true"
                android:fontFamily="@font/roboto"
                android:textSize="12sp"
                android:textColor="#FFFFD346"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/training_image"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp" app:layout_constraintTop_toBottomOf="@+id/training_name"/>
        <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:layout_width="46dp"
                android:layout_height="46dp"
                app:cpb_progress="50"
                app:cpb_background_progressbar_color="#FFEBE9E9"
                app:cpb_background_progressbar_width="4dp"
                app:cpb_progressbar_color="#F44336"
                app:cpb_progressbar_width="4dp" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/circularProgressBar"/>
        <TextView
                android:layout_width="34dp"
                android:layout_height="16dp"
                android:id="@+id/textPercentage"
                android:textAlignment="center"
                android:textColor="#FF14254A"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="@+id/circularProgressBar"
                app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
                app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
                app:layout_constraintStart_toStartOf="@+id/circularProgressBar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>